tests/error/modifier_errors/dagger_index_access.err
Error: Unsupported (at $FILE:9:8)
  | 
7 | def test(q: array[int, 3]) -> None:
8 |     with dagger:
9 |         q[0]
  |         ^^^^ index access is not supported in dagger context

Guppy compilation failed due to 1 previous error
